# namespace-issue

./: README.md
xspeech/: pyproject.toml
xspeech-audio/: pyproject.toml
xspeech-audio/xspeech/audio/: sample.py
xspeech-utils/: pyproject.toml
xspeech-utils/xspeech/utils/: sample.py
xspeech/module1/: sample.py
