[tool.poetry]
name = "xspeech-utils"
version = "1"
description = "none"
authors = ["John Smith <john@example.com>"]

packages = [
  { include = "xspeech/**/*.py" } ,
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"