[tool.poetry]
name = "xspeech"
version = "1"
description = "none"
authors = ["John Smith <john@example.com>"]

packages = [
    { include = "module1/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
xspeech-audio = {path = "../xspeech-audio", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"